# tuff-tuff-light

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  west.yml
3d/: README.md  ttl_base.stl
applications/ttl_receiver/: CMakeLists.txt  Kconfig  prj.conf
applications/ttl_sender/: Kconfig  compile_commands.json  prj.conf
asset/: rehka_image.kicad_mod
boards/: README.md
cad/: AA_X2.stl  right_poc.stl
central/: CMakeLists.txt  prj.conf
central/board/: nrf5340dk_nrf5340_cpuapp.overlay
central/include/: trailer_listener.h
central/src/: main.c  main.c.bak
central/src/trailer_listener/: trailer_listener.c  trailer_listener.h
central/src/ttl_central/: ttl_central.c  ttl_central.h
iso_broadcast/: CMakeLists.txt  overlay-bt_ll_sw_split.conf  prj.conf
iso_broadcast/boards/: nrf52840dk_nrf52840.overlay
iso_broadcast/src/: ble.c  ble.h  gpio.c  gpio.h  main.c  ttf.h  ttl.h
iso_receive/: CMakeLists.txt  nrf-ws2812-bindings.h  prj.conf
iso_receive/boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
iso_receive/src/: accel.c  accel.h  ble.c  ble.h  gpio.c  led.c  led.h  main.c  ttl.h
pcb/ttf_receiver/: TTF_Library.bak  fp-lib-table  tuff_tuff_pcb.kicad_prl  tuff_tuff_pcb.kicad_pro  tuff_tuff_pcb.kicad_sch_old
pcb/ttf_receiver_v1/: TTF_Library.kicad_sym  fp-info-cache  sym-lib-table  (+4 more)
peripheral/: CMakeLists.txt  README.rst  nrf-ws2812-bindings.h  prj.conf  zephyr.patch
ttl_receiver/: Kconfig  prj.conf
ttl_sender/: CMakeLists.txt  Kconfig  overlay-bt_ll_sw_split.conf  prj.conf
(+113 files in other folders)
